# ALGORITMIA-Y-ED---581

Colas/Cola/: main.cpp
Colas/Cola/BibliotecaCola/: Cola.h  ElementoCola.h  funcionesCola.cpp  funcionesCola.h
Colas/ColaPrioridad/Cola/: CMakeLists.txt  main.cpp
Colas/ColaPrioridad/Cola/BibliotecaCola/: Cola.h  ElementoCola.h  NodoCola.h  funcionesCola.cpp  funcionesCola.h
FuerzaBruta/MochilaMejorSolu/MochilaMejorSol/: CMakeLists.txt  main.cpp
FuerzaBruta/Mochila_1/Mochila/: CMakeLists.txt  main.cpp
LabExPasados/Camiones/Camiones/: CMakeLists.txt  main.cpp
LabExPasados/Laboratorio2/: Libros.txt
Lista/ListaSimplementeEnlazada-2026/ListaSimplementeEnlazada/: CMakeLists.txt  main.cpp
Lista/ListaSimplementeEnlazada-2026/ListaSimplementeEnlazada/BibliotecaLista/: Lista.h  funcionesLista.cpp
Lista/ListaSimplementeEnlazada-20260423T173628Z-3-001/ListaSimplementeEnlazada/: main.cpp
Lista/ListaSimplementeEnlazada-20260423T173628Z-3-001/ListaSimplementeEnlazada/BibliotecaLista/: ElementoLista.h  Lista.h  NodoLista.h  funcionesLista.h
MaterialDeAsesoria_17_04/RobotMineroCurvo-20260418T004226Z-3-001/RobotMineroCurvo/: CMakeLists.txt  main.cpp
Pilas/EX-2023-2/PilaAplicada/Pila/: CMakeLists.txt  main.cpp
Pilas/Pila/: main.cpp
Pilas/Pila/BibliotecaPila/: funcionesPila.h
Recursion/Semana3/2016_Robot/: main.cpp
Recursion/Semana_3/2016_Robot/: CMakeLists.txt
Recursion/Semana_4/Problema_Remolino/: main.cpp
Semana 3/Recursion/: CMakeLists.txt
Semana 3/Recursion/Recursion/: main.cpp
Semana 4/Problema_Remolino/: CMakeLists.txt
(+6 files in other folders)
